--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Capstone Portfolio</title>
+    <title>Fred's Portfolio</title>
 
     <!-- mobile responsive meta -->
     <meta charset="utf-8">
@@ -10,10 +10,6 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-    <!-- slick slider -->
-    <link rel="stylesheet" href="plugins/slick/slick.css">
-    <!-- themefy-icon -->
-    <link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
 
     <!-- Main Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -26,7 +22,12 @@
   <body>
     <header class="navigation fixed-top">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand font-tertiary h3" href="#top">Fred's Portfolio</a>
+        <a href="#top">
+          <div class="profile-container">
+            <img class="profile-nav" src="images/profile.png" alt="Fred Balzi">
+            <p class="navbar-brand font-tertiary h3">Fred Balzi</p>
+          </div>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,9 +35,6 @@
 
         <div class="collapse navbar-collapse text-center" id="navigation">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#top">Home</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="#skills">Skills</a>
             </li>
@@ -53,7 +51,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-11 mx-auto">
-            <h1 class="text-white font-tertiary main-title">Hi! <br> I’m Fred. <br> Frontend Developer &lt&sol;&gt</h1>
+            <h1 class="text-white font-tertiary main-title">Hi! <br> I’m Fred. <br> Frontend Developer &lt;&sol;&gt;</h1>
           </div>
         </div>
       </div>
@@ -212,7 +210,7 @@
               <img src="images/portfolio/dashboard-illustration.png" alt="dashboard-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <h5 class="project-paragraph-h">A weba pp dashboard</h5>
+                  <h5 class="project-paragraph-h">A web app dashboard</h5>
                   <p class="project-paragraph no-show-para">Built a full-fledged frontend dabshboard from scratch using HTML, Sass, and JavaScript.</p>
                   <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/web-app-dashboard/" target="_blank">See project</a>
                   <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/web-app-dashboard" target="_blank">view code</a>
@@ -251,7 +249,7 @@
               <img src="images/portfolio/form-illustration.png" alt="form-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <h5 class="project-paragraph-h">An online registration form</h5>
+                  <h5 class="project-paragraph-h">A registration form</h5>
                   <p class="project-paragraph no-show-para">Built a responsive, mobile-friendly registration form.</p>
                   <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/online-registration-form/" target="_blank">view project</a>
                   <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/online-registration-form" target="_blank">view code</a>
@@ -277,7 +275,7 @@
               <img src="images/portfolio/gallery-illustration.png" alt="gallery-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <h5 class="project-paragraph-h">An interactive photo gallery</h5>
+                  <h5 class="project-paragraph-h">An interactive gallery</h5>
                   <p class="project-paragraph no-show-para">Built an interactive photo gallery with CSS grid layout and JavaScript.</p>
                   <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/interactive-photo-gallery/" target="_blank">See project</a>
                   <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/interactive-photo-gallery" target="_blank">view code</a>
@@ -294,14 +292,23 @@
     <footer class="bg-dark">
       <div class="section footer-s">
         <div class="container">
-          <div class="row d-flex justify-content-between">
-            <div class="d-flex flex-column col-3 ol-md-4 mb-4">
-              <a class="text-white mb-4 ml-4" href="https://github.com/fred-pi" target="_blank"><i class="ti-github"></i></a>
-              <a class="text-white mb-4 ml-4" href="https://www.linkedin.com/in/fredbalzi/" target="_blank"><i class="ti-linkedin"></i></a>
+          <div class="footer-cont row d-flex justify-content-between">
+            <div class="d-flex flex-column col-2 ol-md-4 mb-4">
+              <a class="mb-2 ml-4" href="https://github.com/fred-pi" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                  <path fill="white" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                </svg>
+              </a>
+              <a class="mb-2 ml-4" href="https://www.linkedin.com/in/fredbalzi/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="-1 -1 26 26">
+                  <path fill="white" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/>
+                </svg>
+              </a>
             </div>
-            <div class="col-9 mb-4">
+            <div class="col-10 mb-4 px-5">
               <h5 class="text-light">Email</h5>
-              <p class="text-white paragraph-lg font-secondary">balzi.fred@gmail.com</p>
+              <!-- Ignore error on validator, spaces are accepted for drafting an email placeholder text -->
+              <a href="mailto:balzi.fred@gmail.com?subject=Saw&nbsp;your&nbsp;portfolio&nbsp;recently&body=Hey&nbsp;Fred,&nbsp;I&apos;m&nbsp;getting&nbsp;in&nbsp;touch&nbsp;to&period;&period;&period;"><p class="text-white paragraph-lg font-secondary">balzi.fred@gmail.com</p></a>
             </div>
           </div>
         </div>
@@ -313,10 +320,6 @@
   <script src="plugins/jQuery/jquery.min.js"></script>
   <!-- Bootstrap JS -->
   <script src="plugins/bootstrap/bootstrap.min.js"></script>
-  <!-- slick slider -->
-  <script src="plugins/slick/slick.min.js"></script>
-  <!-- filter -->
-  <!-- <script src="plugins/shuffle/shuffle.min.js"></script> -->
   <!-- Main Script -->
   <script src="js/script.js"></script>
 
