fixed button bug

--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
               <img src="images/portfolio/dashboard-illustration.png" alt="dashboard-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <h5 class="project-paragraph-h">A web app dashboard</h5>
+                  <h5 class="project-parag-h">A web app dashboard</h5>
                   <p class="project-paragraph no-show-para">Built a full-fledged frontend dabshboard from scratch using HTML, Sass, and JavaScript.</p>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/web-app-dashboard/" target="_blank">See project</a>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/web-app-dashboard" target="_blank">view code</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/web-app-dashboard/" target="_blank">See project</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/web-app-dashboard" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -223,10 +223,10 @@
               <img src="images/portfolio/directory-illustration.png" alt="directory-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <h5 class="project-paragraph-h">An employee directory</h5>
+                  <h5 class="project-parag-h">An employee directory</h5>
                   <p class="project-paragraph no-show-para">Parsed JSON data from an API to display 12 random employees and their information.</p>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/employee-directory-api/" target="_blank">See project</a>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/employee-directory-api" target="_blank">view code</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/employee-directory-api/" target="_blank">See project</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/employee-directory-api" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -236,10 +236,10 @@
               <img src="images/portfolio/guide-illustration.png" alt="guide-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <h5 class="project-paragraph-h">A web style guide</h5>
+                  <h5 class="project-parag-h">A web style guide</h5>
                   <p class="project-paragraph no-show-para">Converted CSS into Sass and built a useful micro-framework to quickly prototype other websites.</p>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/web-style-guide/" target="_blank">See project</a>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/web-style-guide" target="_blank">view code</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/web-style-guide/" target="_blank">See project</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/web-style-guide" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -249,10 +249,10 @@
               <img src="images/portfolio/form-illustration.png" alt="form-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <h5 class="project-paragraph-h">A registration form</h5>
+                  <h5 class="project-parag-h">A registration form</h5>
                   <p class="project-paragraph no-show-para">Built a responsive, mobile-friendly registration form.</p>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/online-registration-form/" target="_blank">view project</a>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/online-registration-form" target="_blank">view code</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/online-registration-form/" target="_blank">view project</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/online-registration-form" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -262,10 +262,10 @@
               <img src="images/portfolio/game-illustration.png" alt="game-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <h5 class="project-paragraph-h">A game show app</h5>
+                  <h5 class="project-parag-h">A game show app</h5>
                   <p class="project-paragraph no-show-para">Built a browser version of the Wheel of Success, a game where players try to guess a random phrase.</p>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/game-show-app/" target="_blank">See project</a>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/game-show-app" target="_blank">view code</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/game-show-app/" target="_blank">See project</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/game-show-app" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -275,10 +275,10 @@
               <img src="images/portfolio/gallery-illustration.png" alt="gallery-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <h5 class="project-paragraph-h">An interactive gallery</h5>
+                  <p class="project-parag-h">An interactive gallery</p>
                   <p class="project-paragraph no-show-para">Built an interactive photo gallery with CSS grid layout and JavaScript.</p>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/interactive-photo-gallery/" target="_blank">See project</a>
-                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/interactive-photo-gallery" target="_blank">view code</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/interactive-photo-gallery/" target="_blank">See project</a>
+                  <a class="project-button btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/interactive-photo-gallery" target="_blank">view code</a>
                 </div>
               </div>
             </div>
